--- a/projects/dgad-alert-lib/package.json
+++ b/projects/dgad-alert-lib/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@dgad/alert-lib",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "description": "Libreria (TOC) que permite mostrar mensjes de alerta",
+  "author": "FJRM",
+  "private": false,
   "peerDependencies": {
     "@angular/common": "^8.2.13",
     "@angular/core": "^8.2.13"
